tests/snapshots/regression/recovery__missing_commas_then_continue.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/recovery/missing_commas_then_continue.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 2 errors • tests/fixtures/recovery/missing_commas_then_continue.flx
error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/recovery/missing_commas_then_continue.flx:1:9
  |
1 | print(1 2 3);
  |         ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/recovery/missing_commas_then_continue.flx:1:11
  |
1 | print(1 2 3);
  |           ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.

Found 2 errors.
